# expr_codegen

./: LICENSE  README.md  pyproject.toml  requirements.txt  requirements_pg.txt  setup.py  streamlit_app.py
analysis/: README.md  demo.html  demo.py  demo1.py  demo2.py  demo3.py  ic.py  information_coefficient.py  portfolio.py  public.py  reports.py  requirements.txt  returns.py  template.ipynb  turnover.py
codes/: demo_exec.py  prepare_data.py
data/: prepare_data.py
deprecated/polars_group/: code.py  printer.py  template.py.j2
examples/: alpha101.py  alpha101.txt  demo_cn.py  demo_cn2.py  demo_columns.py  demo_exec.py  demo_exec_codes.py  demo_exec_pd.py  demo_exec_pl.py  demo_express.py  demo_keyword_parameter.py  demo_min.py  demo_pandas_cn.py  demo_polars_cn.py  demo_sql.py  demo_tdx.py  demo_transformer.py  output.py  output_alpha101.py  output_pandas.py  output_polars.py  prefilter.py  prepare_data.py  show_tree.py  sympy_define.py  tail_n.py
expr_codegen/: __init__.py  codes.py  dag.py  expr.py  model.py  printer.py  tool.py
expr_codegen/latex/: printer.py
expr_codegen/pandas/: code.py  helper.py  printer.py  ta.py  template.py.j2
expr_codegen/polars/: code.py  printer.py  template.py.j2  template_gp.py.j2
expr_codegen/polars_group/: code.py  template.py.j2
expr_codegen/polars_over/: code.py  template.py.j2
expr_codegen/rust/: code.py  printer.py  template.rs.j2
expr_codegen/sql/: code.py  printer.py  template.sql.j2
expr_codegen/symbols/: ta.py  talib.py  tdx.py  wq.py
gp/: README.md  check_codes.py  check_exprs.py  custom.py  deap_patch.py  helper.py  main.py  out_of_sample.py  prepare_data.py  primitives.py
sympy_polars/: expr.py  polars.py.j2  printer.py  tool.py
sympy_polars/polars/: code.py  template.py.j2
tests/: expr_order.py  formula_transformer.py  speed_pandas.py  speed_pandas2.py  speed_polars.py  speed_polars2.py
tools/: codegen_primitive.py  codegen_symbols.py
