[project]
name = "expr_codegen"
authors = [
    { name = "wukan", email = "wu-kan@163.com" },
]
description = "symbol expression to polars expression tool"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["polars", "expression", "talib"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    'black',
    'Jinja2',
    'networkx',
    'loguru',
    'sympy',
    'ast-comments',
]
dynamic = ["version"]

[project.optional-dependencies]
streamlit = [
    'streamlit',
    'streamlit-ace',
    'more_itertools',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "expr_codegen/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["expr_codegen"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["expr_codegen*"]
